walkthroughs/howto-k8s-alb/v1beta2/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    alb.ingress.kubernetes.io/scheme: internal
    #kubernetes.io/ingress.class: alb
  name: color
  namespace: app-dev
spec:
  ingressClassName: alb	
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/color"
          backend:
            service:
              name: front
              port:
                number: 8080
